@@ -1,7 +1,7 @@
 #  File src/library/stats/R/t.test.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2015 The R Core Team
+#  Copyright (C) 1995-2019 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -116,10 +116,11 @@ function(x, y = NULL, alternative = c("two.sided", "less", "greater"),
     attr(cint,"conf.level") <- conf.level
     rval <- list(statistic = tstat, parameter = df, p.value = pval,
 	       conf.int = cint, estimate = estimate, null.value = mu,
+	       stderr = stderr,
 	       alternative = alternative,
 	       method = method, data.name = dname)
     class(rval) <- "htest"
-    return(rval)
+    rval
 }
 
 t.test.formula <-
